--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-singlefile": "^2.0.1"
   },
   "dependencies": {
     "papaparse": "^5.4.1"
