--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/papaparse": "^5.3.14",
+    "@types/serviceworker": "^0.0.85",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.2",
