--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - dev
 jobs:
-  deploy-to-firebase:
+  deploy-to-dev:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm ci && npm run build
+      - run: npm ci && npm test && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
